# lidar_bot

motion_planning/: CMakeLists.txt  package.xml
motion_planning/include/motion_planning/: pd_motion_planner.hpp
motion_planning/src/: pd_motion_planner.cpp
motor_test/: CMakeLists.txt
motor_test/include/motor_test/: arduino_comms.hpp  diffdrive.hpp  wheel.hpp
motor_test/src/: diffdrive.cpp
my_robot_bringup/: CMakeLists.txt
my_robot_bringup/config/: amcl_config.yaml  twist_mux.yaml
my_robot_bringup/launch/: my_robot.launch.py  my_robot.launch.xml  my_sim.launch.py  my_sim_simple.launch.py
my_robot_bringup/world/: empty.world
my_robot_description/urdf/: gazebo_control.xacro  lidar.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  my_robot.urdf.xacro
my_robot_navigation/: CMakeLists.txt  package.xml
my_robot_navigation/config/: nav2_params.yaml
my_robot_navigation/launch/: navigation.launch.py
planning/: CMakeLists.txt  package.xml
planning/include/planning/: dijkstra_planner.hpp
planning/src/: dijkstra_planner.cpp
src/motion_planning/: package.xml
src/motion_planning/src/: pd_motion_planner.cpp
src/motor_test/: hardware_interface_plugin.xml  package.xml
src/my_robot_bringup/: package.xml
src/my_robot_bringup/config/: gz_bridge.yaml  my_robot_controllers.yaml  twist_mux.yaml
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/urdf/: gazebo_control.xacro
src/my_robot_navigation/config/: nav2_params.yaml
src/my_robot_navigation/launch/: navigation.launch.py
src/planning/: CMakeLists.txt  package.xml
